--- a/app/views/test_submissions/knowledge_exam.html.erb
+++ b/app/views/test_submissions/knowledge_exam.html.erb
@@ -1,12 +1,7 @@
-<h1>Instructions</h1>
-<ol>
-  <li>This Test is for you to quiz your knowledge that you have obtained after reading the course material.</li>
-</ol>
-</div>
-
-
-<h2><em>Course Test</em></h2>
+<div id="content-hp">
+<h1><%= @knowledge_test.title %></h1>
+<p><%= @knowledge_test.description %>.</p>
 
 
 <%= render 'blank_test' %>
-
+</div>
