added in truncate to event description on index page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -36,7 +36,12 @@
     <% elsif event.event_statuses_id == 3 %>
       <span class="error" style="display: inline;"> -- Canceled</span>
     <% end %>
-<br /><%= sanitize(event.details) %>
+    <br />
+      <% if event.details.length > 220 %>
+        <%= truncate(event.details, :length => 220, :separator => ' ') %> <em><%= link_to "Go to event", event %></em>
+      <% else %>
+        <%= event.details %>
+      <% end %>
   </div>
   </div>
 <% current_event_type = event.event_type.title %>
@@ -72,7 +77,13 @@
     <% end %>
   </div>
   <div class="cell" style="width: 65%;">
-    <strong><em><%= link_to event.title, event %></em></strong><br /><%= sanitize(event.details) %>
+    <strong><em><%= link_to event.title, event %></em></strong>
+    <br />
+      <% if event.details.length > 220 %>
+        <%= truncate(event.details, :length => 220, :separator => ' ') %> <em><%= link_to "Go to event", event %></em>
+      <% else %>
+        <%= event.details %>
+      <% end %>
   </div>
 </div>
 <% current_event_type = event.event_type.title %>
@@ -107,7 +118,13 @@
     <% end %>
   </div>
   <div class="cell" style="width: 65%;">
-    <strong><em><%= link_to event.title, event %></em></strong><br /><%= sanitize(event.details) %>
+    <strong><em><%= link_to event.title, event %></em></strong>
+    <br />
+      <% if event.details.length > 220 %>
+        <%= truncate(event.details, :length => 220, :separator => ' ') %> <em><%= link_to "Go to event", event %></em>
+      <% else %>
+        <%= event.details %>
+      <% end %>
   </div>
 </div>
 <% current_event_type = event.event_type.title %>
@@ -142,7 +159,13 @@
     <% end %>
   </div>
   <div class="cell" style="width: 65%;">
-    <strong><em><%= link_to event.title, event %></em></strong><br /><%= sanitize(event.details) %>
+    <strong><em><%= link_to event.title, event %></em></strong>
+    <br />
+      <% if event.details.length > 220 %>
+        <%= truncate(event.details, :length => 220, :separator => ' ') %> <em><%= link_to "Go to event", event %></em>
+      <% else %>
+        <%= event.details %>
+      <% end %>
   </div>
 </div>
 <% current_event_type = event.event_type.title %>
