update to event graphic size, added LHFE to title of LHFE page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -103,7 +103,7 @@
 <% end %>
 
 <% if @event.graphic_address? %>
-  <div class="event_graphic"><%= image_tag(@event.graphic_address, :width => '500px') %></div>
+  <div class="event_graphic"><%= image_tag(@event.graphic_address) %></div>
 <% end %>
 
 <% if @event.details? %>
