--- a/app/views/pages/living_flight_history_experience.html.erb
+++ b/app/views/pages/living_flight_history_experience.html.erb
@@ -47,7 +47,7 @@
 
 <% end %>
 
-<h1>An Experience Like No Other</h1>
+<h1>An Experience Like No Other - Living History Flight Experience</h1>
 
 <div style="float:right; margin: 0 0 0.5em 0.5em;border: 1px solid #999; text-align: center; padding: 0.5em;">
 <%= image_tag "lhfe_brief.jpg", :width => '250px', :border => '1px solid #000' %><br />
