--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -5,14 +5,27 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body>
 
-<div id="page">
+<div id="container">
 
-<%= render 'layouts/header' %>
+<header>
+  <div class="logo">
+    <%= link_to image_tag("logo.png", :alt => "Devil Dog Squadron"), "/" %>
+  </div>
+  <div class="header-image">
+    <%= image_tag("headers/" + random_image) %>
+  </div>
+</header>
 
-<div id="main-area">
+<nav id="top-nav">
+    <%= render 'layouts/nav' %>
+</nav>
+
+
+<div id="main">
 
 
 <%= yield %>
