fixed broken calendar link

--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -11,7 +11,7 @@
 
 <p>If you are interested in helping to preserve the Devil Dog the are many opportunities to do so. The monthly staff meetings are open to the public and are a good chance to meet the members and learn more about the group (and there is often a BBQ lunch!). </p>
 
-<p>The monthly meetings are usually followed by work on the aircraft or preparation for the next airshow, providing a great opportunity to get up close and personal without the usual crowds that surround the Dog at airshows. Check our <a href="calendar.php">calendar page</a> for meeting dates and times.</p>
+<p>The monthly meetings are usually followed by work on the aircraft or preparation for the next airshow, providing a great opportunity to get up close and personal without the usual crowds that surround the Dog at airshows. Check our <a href="../calendar">calendar page</a> for meeting dates and times.</p>
 
 <h2>Membership</h2>
 
