worked on basic page layouts

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 
 <!-- CLOSE header_logo CONTAINER -->
 </div>
-<%= image_tag("headers/" + random_image) %>
+<%= image_tag("headers/" + random_image, :width => "100%") %>
 <div id="navbox">
 
 <ul id="nav">
