--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -60,9 +60,20 @@ a img {
   }
 
 nav#top-nav ul {
-  width: 70%;
-  float: right;
   margin-top: -60px;
+
+  list-style: none;
+  margin: 0 0 1em 0;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+
   }
 
 header {
@@ -192,64 +203,115 @@ header.logo {
   }
 
 nav#top-nav {
-  -webkit-order: 2;
-  -ms-order: 2;
-  order: 2;
-  }
-
-#main {
-  -webkit-order: 5;
-  -ms-order: 5;
-  order: 5;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row;
-  -ms-flex-flow: row;
-  flex-flow: row;
+  -webkit-order: 2;
+  -ms-order: 2;
+  order: 2;
+  background: #b78d03;
+  position: relative;
+  }
+
+#main, #main-home {
+  -webkit-order: 3;
+  -ms-order: 3;
+  order: 3;
+  display: -webkit-flex; 
+  display: -ms-flexbox; 
+  display: flex; 
+  -webkit-flex-flow: row wrap; 
+  -ms-flex-flow: row wrap; 
+  flex-flow: row wrap; 
+  -webkit-justify-content: space-around; 
+  -ms-flex-pack: center; 
+  -justify-content: space-around; 
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  padding: 1em 0 3em 0;
+  padding: 1em 0 2em 0;
+  background: #f0f0f0;
   }
 
-nav {
+nav#top-nav > ul {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
   
-  }
+    nav#top-nav > ul > li {
+      flex: 0 1 auto;
+      margin: 0;
+      padding: 0;
+      width: 160px;
+    }
+    
+      nav#top-nav > ul > li:hover {
+        background: #ddd;
+      }
+      
+      nav#top-nav > ul > li a {
+        background: linear-gradient(to bottom,rgba(102,102,102,1) 0,rgba(0,0,0,0.96) 100%);;
+        border: none;
+        border-radius: 0 0 2px 2px;
+        box-shadow: 0 3px 1px rgba(0,0,0,.05);
+        display: none;
+        font-size: 1em;
+        position: absolute;
+        width: 195px;
+      }
+      
+        nav#top-nav > ul > li:hover a {
+          display: block;
+        }
+        
+        nav#top-nav > ul > li a > ul {
+          list-style-type: none;  
+        }
+        
+          nav#top-nav > ul > li a > ul > li {
+            margin: 0;
+            padding: 0;
+          }
+          
+            nav#top-nav > ul > li a > ul > li > a {
+              color: rgba(255,255,255,.9);
+              display: block;  
+              font-size: .75rem;
+              padding: .25em 1.5em;
+              text-decoration: none;
+            }
+            
+              nav#top-nav > ul > li a > ul > li:hover > a {
+                background-color: rgba(0,0,0,.15);  
+              }
+  
+      nav#top-nav > ul > li > a {
+        align-items: flex-start;
+        color: #fff;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+        font-size: 1.25em;
+        font-weight: 200;
+        letter-spacing: 1px;
+        max-width: 160px;
+        padding: 1em 1em;
+        text-decoration: none;
+        text-shadow: 0 1px 1px rgba(0,0,0,.1);
+        transition: all linear 0.1s;
+      }
 
-nav#top-nav ul {
-  width: 70%;
-  float: right;
-  margin-top: 60px;
-  }
 
-nav#hp-nav ul, nav#top-nav ul  {
-  font-weight: 200;
-  font-size: 1.1em;
-  list-style: none;
-  /*text-shadow: 0 0 3px #999, 4px 4px 4px #ccc;*/
-  -webkit-flex-flow: row;
-  -ms-flex-flow: row;
-  flex-flow: row;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: justify;
-  justify-content: space-around;
-  }
-
-nav#hp-nav li, nav#top-nav li {
-  min-width: min-content;
-  display: block;
-  }
-
-nav#hp-nav a, nav#top-nav a  {
-  color: #333;
-  border: none;
-  }
-
-nav#hp-nav a:hover, nav#top-nav a:hover {
-  text-decoration: none;
-  text-shadow: 0 0 3px #68a5d2, 4px 4px 4px #b1dcf2;
-  background: none;
-  }
 
 /*=================================================
 LEGACY
@@ -324,28 +386,45 @@ div.clearer {
 /* MAIN PAGE - LEFT COLUMN STYLING */
 /* ------------------------------- */
 
-.content-left {
-        float: left;
-        width: 560px;
-        margin: 20px 10px;
-        padding-right: 20px;
+.content {
+  width: 95%;
+  border: 1px solid #000;
+  background: #fff url("/assets/planform_sidebar.gif") repeat-y top right;
+  display: -webkit-flex; 
+  display: -ms-flexbox; 
+  display: flex; 
+  -webkit-flex-flow: row wrap; 
+  -ms-flex-flow: row wrap; 
+  flex-flow: row wrap; 
+  -webkit-justify-content: space-around; 
+  -ms-flex-pack: center; 
+  -justify-content: space-around; 
+  }
+
+article {
+        width: 65%;
+        margin: 2em 1em;
+        padding: 20px;
         background: #fff;
         border-right: 1px solid #999;
         }
 
-.content-left h1 {
-        font-size: 18px;
-        color: #0b2040;
-        }
+article h1, article h2 {
+  font-weight: bold;
+  color: #0b2040;
+  }
  
- .content-left h2 {
-        font-size: 14px;
-        color: #0b2040;
+article h1 {
+  font-size: 1.65em;
+  }
 
-        }
+article h2 {
+  font-size: 1.25em;
+  }
  
-.content-left p {
+article p {
         line-height: 1.6;
+        margin: 1.5em 0;
         }
 
 .content-wide {
@@ -358,9 +437,8 @@ div.clearer {
 /* MAIN PAGE - RIGHT COLUMN STYLING */
 /* -------------------------------- */
 
-#right-column {
-        float: left;
-        width: 220px;
+aside {
+        width: 25%;
         margin: 50px auto; /*sets top of right column content - set to be below page headline */
         font-family: Verdana, Helvetica, sans-serif;
         font-size: 12px;
@@ -370,22 +448,27 @@ div.clearer {
         }
 
 .right-column-box {
-        float: left;
-        width: 210px;
-        margin: 20px 10px 30px 10px;
-        background: #fff;
-        border: 1px solid #999999;
-        }
+  float: left;
+  width: 90%;
+  margin: 20px 10px 30px 10px;
+  background: #fff;
+  border: 1px solid #999999;
+  }
 
-.right-column-box h1 {
-        background:  url("/assets/home_page_box_hdr.png") no-repeat top left;
-        height: 24px;
-        margin: 0 auto;
-        padding: 0px 0px 0px 4px;
-        font-family: Verdana, Helvetica, sans-serif;
-        font-size: 14px;
-        color: #fff;
-        border-bottom: 1px solid #999999;
+.right-column-box h1, .home-box h1 {
+  background: #52782a; /* Old browsers */
+  background: -moz-linear-gradient(top,  #52782a 0%, #2f2f2f 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#52782a), color-stop(100%,#2f2f2f)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #52782a 0%,#2f2f2f 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #52782a 0%,#2f2f2f 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #52782a 0%,#2f2f2f 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #52782a 0%,#2f2f2f 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52782a', endColorstr='#2f2f2f',GradientType=0 ); /* IE6-9 */
+  padding: 0.5em;
+  font-family: Verdana, Helvetica, sans-serif;
+  font-size: 1.4em;
+  color: #fff;
+  border-bottom: 1px solid #999999;
         }
 
 .right-column-box p {
@@ -424,19 +507,7 @@ div.clearer {
         /*border: 1px solid #cadbeb;*/
         }
 
-.row-container h1 {
-        background:  url("/assets/home_page_box_hdr.png") no-repeat top left;
-        height: 24px;
-        margin: 0 auto;
-        padding: 0px 0px 0px 4px;
-        margin-bottom: 0px;
-        font-family: Verdana, Helvetica, sans-serif;
-        font-size: 16px;
-        color: #fff;
-        border-bottom: 1px solid #999999;
-        }
-
-.row-container p {
+.home-box p {
         font-family: Verdana, Helvetica, sans-serif;
         font-size: 12px;
         color: #333333;
@@ -446,35 +517,28 @@ div.clearer {
         padding: 0px 5px 0px 5px;
         }
 
-.row-container table {
+.home-box table {
         font-family: Verdana, Helvetica, sans-serif;
         font-size: 12px;
         color: #333333;
         }
 
-.row-container img.caf {
+.home-box img.caf {
         /*width: 95px;*/   /*Not sure what this was for...*/
         margin-left: 10px;
         padding: 9px 9px 0px 0px;
         }
 
-.home-left-box {
-        float: left;
-        width: 420px;
-        height: 230px;
-        margin: 0px 0px 10px 5px;
-        background: #fff;
-        border: 1px solid #999;
+.home-box {
+  width: 45%;
+  margin: 1em 0;
+  background: #fff;
+  border: 1px solid #999;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
         }
 
-.home-right-box {
-        float: right;
-        width: 420px;
-        height: 230px;
-        margin: 0px 0px 10px 5px;
-        background: #fff;
-        border: 1px solid #999;
-        }
 
 /* ------------- */
 /* TABLE STYLING */
@@ -559,22 +623,26 @@ div.clearer {
 /* FOOTER STYLING */
 /* -------------- */
 
-.bottom-container {
-        position: relative;
-        width: 900px;
-        height: 34px;
-        margin: 0px 0px 0px 0px;
-        clear: both;
-        text-align: center;
-        font-family: Verdana, Helvetica, sans-serif;
-        font-size: 12px;
-        color: #b78d03;
-        line-height: 1.6;
-        border-top: 1px solid #999999;
-        background: #0b2040;
-        }
+footer {
+  -webkit-order: 7;
+  -ms-order: 7;
+  order: 7;
+  width: 100%;
+  margin: 0;
+  border-top: 1px solid #999999;
+  background: #0b2040;
+  }
 
-.bottom-container a {
+footer p {
+  text-align: center;
+  margin: 1.8em 0;
+  font-family: Verdana, Helvetica, sans-serif;
+  font-size: 1.2em;
+  color: #b78d03;
+  line-height: 1.6;
+  }
+
+footer p a:link {
         color: #b78d03;
         }
 
